--- a/pages/projects.html
+++ b/pages/projects.html
@@ -47,10 +47,45 @@
       <div class="flex flex-col gap-y-24 w-full max-w-6xl mx-auto">
 
         <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
+          <div class="container"><img class="shadow-2xl" src="../images/inflooens-cover.png"/></div>
+          <div class="flex flex-col w-full justify-center">
+            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">inflooens Events Page</h2>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Nickolas Crim</h4>
+              <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong> Nickolas Crim</h4>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> XD, Wordpress</h4>
+
+          </div>
+        </div>
+
+        <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
+          <div class="container"><img class="shadow-2xl" src="../images/jbloommedia-cover.png"/></div>
+          <div class="flex flex-col w-full justify-center">
+            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">jbloommedia Refresh</h2>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Jana Bramwell, Nickolas Crim</h4>
+              <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong> Nickolas Crim</h4>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Figma, Webflow</h4>
+
+          </div>
+        </div>
+
+        <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
+          <div class="container"><img class="shadow-2xl" src="../images/wavecrest-cover.png"/></div>
+          <div class="flex flex-col w-full justify-center">
+            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">WaveCrest Marketing Homepage</h2>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Nickolas Crim</h4>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Figma </h4>
+
+            <div class="flex flex-row pt-8">
+              <a href="https://www.figma.com/proto/bW9IZStfmASsBKXdkGrCrJ/WaveCrest-Marketing?node-id=12%3A3&scaling=min-zoom&page-id=0%3A1" target="_blank"><img class="h-8 inline" src="../images/figma.svg"/></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
           <div class="container"><img class="shadow-2xl" src="../images/radreads-cover.png"/></div>
           <div class="flex flex-col w-full justify-center">
-            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">RadReads Homepage</h2>
-            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> In-progress</h4>
+            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">RadReads Design Concept</h2>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Nickolas</h4>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Figma</h4>
             <div class="flex flex-row pt-8">
               <a href="https://www.figma.com/file/vEn4Dz5Uh53xugdwF9M5Oq/RadReads?node-id=0%3A1" target="_blank"><img class="h-8 inline" src="../images/figma.svg"/></a>
@@ -64,7 +99,6 @@
           <div class="flex flex-col w-full justify-center">
             <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">Tolbert and Associates Homepage</h2>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Nickolas Crim</h4>
-            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong> In-progress</h4>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Figma, Webflow</h4>
             <div class="flex flex-row pt-8">
               <a href="https://www.figma.com/file/KYQuYBirHffs6Nrfe9hqUR/Tolbert-%26-Associates?node-id=0%3A1" target="_blank"><img class="h-8 inline" src="../images/figma.svg"/></a>
@@ -78,7 +112,6 @@
           <div class="flex flex-col w-full justify-center">
             <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">Alma Coffee Homepage</h2>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Nickolas Crim</h4>
-            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong> In-progress</h4>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Figma, Webflow</h4>
             <div class="flex flex-row pt-8">
               <a href="https://www.figma.com/file/U0VrwE2KPJOAWpl9GiPQK8/Alma-Coffee?node-id=0%3A1" target="_blank"><img class="h-8 inline" src="../images/figma.svg"/></a>
@@ -87,7 +120,7 @@
         </div>
 
         <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
-          <div class="container"><img class="shadow-2xl" src="../images/personal-site-cover.png"/></div>
+          <div class="container"><img class="shadow-2xl" src="../images/nickolasc-cover.png"/></div>
           <div class="flex flex-col w-full justify-center">
             <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">Personal Site</h2>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Nickolas Crim</h4>
@@ -103,7 +136,7 @@
         <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
           <div class="container"><img class="shadow-2xl" src="../images/firststone-cover.png"/></div>
           <div class="flex flex-col w-full justify-center">
-            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">First Stone Fitness</h2>
+            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">First Stone Fitness Refresh</h2>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Sam Sager, Nickolas Crim</h4>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong> Sam Sager, Nickolas Crim</h4>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Webflow</h4>
@@ -118,8 +151,8 @@
           <div class="container"><img class="shadow-2xl" src="../images/crowdhealth-cover.png"/></div>
           <div class="flex flex-col w-full justify-center">
             <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">CrowdHealth</h2>
-            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Principe Design, Nickolas Crim</h4>
-            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong> Nickolas Crim</h4>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Principe Design, Crate Bind,  Nickolas Crim</h4>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong>Crate Bind, Nickolas Crim</h4>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Webflow</h4>
             <div class="flex flex-row pt-8">
               <a href="https://www.joincrowdhealth.com/" target="_blank"><img class="h-8 inline pr-6" src="../images/www.svg"/></a>
