--- a/pages/projects.html
+++ b/pages/projects.html
@@ -46,16 +46,6 @@
     <section class="flex w-full justify-center px-6 py-32">
       <div class="flex flex-col gap-y-24 w-full max-w-6xl mx-auto">
 
-        <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
-          <div class="container"><img class="shadow-2xl" src="../images/inflooens-cover.png"/></div>
-          <div class="flex flex-col w-full justify-center">
-            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">inflooens Events Page</h2>
-            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Nickolas Crim</h4>
-              <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong> Nickolas Crim</h4>
-            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> XD, Wordpress</h4>
-
-          </div>
-        </div>
 
         <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
           <div class="container"><img class="shadow-2xl" src="../images/jbloommedia-cover.png"/></div>
@@ -64,6 +54,9 @@
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Jana Bramwell, Nickolas Crim</h4>
               <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong> Nickolas Crim</h4>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Figma, Webflow</h4>
+            <div class="flex flex-row pt-8">
+              <a href="https://jbloommedia.com" target="_blank"><img class="h-8 inline pr-6" src="../images/www.svg"/></a>
+            </div>
 
           </div>
         </div>
@@ -77,6 +70,19 @@
 
             <div class="flex flex-row pt-8">
               <a href="https://www.figma.com/proto/bW9IZStfmASsBKXdkGrCrJ/WaveCrest-Marketing?node-id=12%3A3&scaling=min-zoom&page-id=0%3A1" target="_blank"><img class="h-8 inline" src="../images/figma.svg"/></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
+          <div class="container"><img class="shadow-2xl" src="../images/inflooens-cover.png"/></div>
+          <div class="flex flex-col w-full justify-center">
+            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">inflooens Events Page</h2>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Nickolas Crim</h4>
+              <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong> Nickolas Crim</h4>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> XD, Wordpress</h4>
+            <div class="flex flex-row pt-8">
+              <a href="https://inflooens.com/events" target="_blank"><img class="h-8 inline pr-6" src="../images/www.svg"/></a>
             </div>
           </div>
         </div>
