--- a/pages/projects.html
+++ b/pages/projects.html
@@ -46,55 +46,14 @@
     <section class="flex w-full justify-center px-6 py-32">
       <div class="flex flex-col gap-y-24 w-full max-w-6xl mx-auto">
 
-
         <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
-          <div class="container"><img class="shadow-2xl" src="../images/jbloommedia-cover.png"/></div>
+          <div class="container"><img class="shadow-2xl" src="../images/ccwsa-cover.png"/></div>
           <div class="flex flex-col w-full justify-center">
-            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">jbloommedia Refresh</h2>
-            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Jana Bramwell, Nickolas Crim</h4>
-              <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong> Nickolas Crim</h4>
-            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Figma, Webflow</h4>
-            <div class="flex flex-row pt-8">
-              <a href="https://jbloommedia.com" target="_blank"><img class="h-8 inline pr-6" src="../images/www.svg"/></a>
-            </div>
-
-          </div>
-        </div>
-
-        <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
-          <div class="container"><img class="shadow-2xl" src="../images/wavecrest-cover.png"/></div>
-          <div class="flex flex-col w-full justify-center">
-            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">WaveCrest Marketing Homepage</h2>
+            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">CCWSA Dashboard</h2>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Nickolas Crim</h4>
-            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Figma </h4>
-
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> XD</h4>
             <div class="flex flex-row pt-8">
-              <a href="https://www.figma.com/proto/bW9IZStfmASsBKXdkGrCrJ/WaveCrest-Marketing?node-id=12%3A3&scaling=min-zoom&page-id=0%3A1" target="_blank"><img class="h-8 inline" src="../images/figma.svg"/></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
-          <div class="container"><img class="shadow-2xl" src="../images/inflooens-cover.png"/></div>
-          <div class="flex flex-col w-full justify-center">
-            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">inflooens Events Page</h2>
-            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Nickolas Crim</h4>
-              <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong> Nickolas Crim</h4>
-            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> XD, Wordpress</h4>
-            <div class="flex flex-row pt-8">
-              <a href="https://inflooens.com/events" target="_blank"><img class="h-8 inline pr-6" src="../images/www.svg"/></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
-          <div class="container"><img class="shadow-2xl" src="../images/radreads-cover.png"/></div>
-          <div class="flex flex-col w-full justify-center">
-            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">RadReads Design Concept</h2>
-            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Nickolas</h4>
-            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Figma</h4>
-            <div class="flex flex-row pt-8">
-              <a href="https://www.figma.com/file/vEn4Dz5Uh53xugdwF9M5Oq/RadReads?node-id=0%3A1" target="_blank"><img class="h-8 inline" src="../images/figma.svg"/></a>
+              <a href="https://xd.adobe.com/view/64b1fa63-2f99-41fc-a29d-0b1529d0b5b5-31e2/" target="_blank"><img class="h-8 inline" src="../images/xd.svg"/></a>
             </div>
 
           </div>
@@ -114,6 +73,34 @@
         </div>
 
         <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
+          <div class="container"><img class="shadow-2xl" src="../images/wavecrest-cover.png"/></div>
+          <div class="flex flex-col w-full justify-center">
+            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">WaveCrest Marketing Homepage</h2>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Nickolas Crim</h4>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Figma </h4>
+
+            <div class="flex flex-row pt-8">
+              <a href="https://www.figma.com/proto/bW9IZStfmASsBKXdkGrCrJ/WaveCrest-Marketing?node-id=12%3A3&scaling=min-zoom&page-id=0%3A1" target="_blank"><img class="h-8 inline" src="../images/figma.svg"/></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
+          <div class="container"><img class="shadow-2xl" src="../images/radreads-cover.png"/></div>
+          <div class="flex flex-col w-full justify-center">
+            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">RadReads Design Concept</h2>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Nickolas</h4>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Figma</h4>
+            <div class="flex flex-row pt-8">
+              <a href="https://www.figma.com/file/vEn4Dz5Uh53xugdwF9M5Oq/RadReads?node-id=0%3A1" target="_blank"><img class="h-8 inline" src="../images/figma.svg"/></a>
+            </div>
+
+          </div>
+        </div>
+
+
+
+        <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
           <div class="container"><img class="shadow-2xl" src="../images/alma-cover.png"/></div>
           <div class="flex flex-col w-full justify-center">
             <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">Alma Coffee Homepage</h2>
@@ -126,6 +113,22 @@
         </div>
 
         <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
+          <div class="container"><img class="shadow-2xl" src="../images/jbloommedia-cover.png"/></div>
+          <div class="flex flex-col w-full justify-center">
+            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">jbloommedia Refresh</h2>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Jana Bramwell, Nickolas Crim</h4>
+              <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong> Nickolas Crim</h4>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Figma, Webflow</h4>
+            <div class="flex flex-row pt-8">
+              <a href="https://jbloommedia.com" target="_blank"><img class="h-8 inline pr-6" src="../images/www.svg"/></a>
+            </div>
+
+          </div>
+        </div>
+
+
+
+        <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
           <div class="container"><img class="shadow-2xl" src="../images/nickolasc-cover.png"/></div>
           <div class="flex flex-col w-full justify-center">
             <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">Personal Site</h2>
@@ -135,6 +138,19 @@
             <div class="flex flex-row pt-8">
               <a href="https://github.com/nickolascrim/personal-site" target="_blank"><img class="h-8 inline pr-6" src="../images/github.svg"/></a>
               <a href="https://www.nickolasc.com/" target="_blank"><img class="h-8 inline pr-6" src="../images/www.svg"/></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex flex-col gap-y-12 md:flex-row md:gap-x-12">
+          <div class="container"><img class="shadow-2xl" src="../images/inflooens-cover.png"/></div>
+          <div class="flex flex-col w-full justify-center">
+            <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">inflooens Events Page</h2>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Nickolas Crim</h4>
+              <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong> Nickolas Crim</h4>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> XD, Wordpress</h4>
+            <div class="flex flex-row pt-8">
+              <a href="https://inflooens.com/events" target="_blank"><img class="h-8 inline pr-6" src="../images/www.svg"/></a>
             </div>
           </div>
         </div>
@@ -158,7 +174,7 @@
           <div class="flex flex-col w-full justify-center">
             <h2 class="text-3xl sm:text-4xl font-semibold text-slate-700 pb-6">CrowdHealth</h2>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Design:</strong> Principe Design, Crate Bind,  Nickolas Crim</h4>
-            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong>Crate Bind, Nickolas Crim</h4>
+            <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Development:</strong> Crate Bind, Nickolas Crim</h4>
             <h4 class="text-lg sm:text-xl font-light text-slate-700"><strong>Tools:</strong> Webflow</h4>
             <div class="flex flex-row pt-8">
               <a href="https://www.joincrowdhealth.com/" target="_blank"><img class="h-8 inline pr-6" src="../images/www.svg"/></a>
